--- a/Neuron.CapturaManual/app.config
+++ b/Neuron.CapturaManual/app.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="Neuron.Satellite.CapturaManual.Properties.Settings.DBConnectionString"
-            connectionString="Data Source=vm-lysissql2.cloudapp.net;Initial Catalog=LYSISMariaAuxiliadora;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True; Application Name=CapturaManual"
+            connectionString="Data Source=Lysis1.eastus2.cloudapp.azure.com;Initial Catalog=LYSISNCST;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True; Application Name=CapturaManual"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <applicationSettings>
