--- a/Neuron.OSC.Data/Properties/Settings.settings
+++ b/Neuron.OSC.Data/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="LYSIS1ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=vm-blancodev.cloudapp.net;Initial Catalog=LYSISDev;Persist Security Info=True;User ID=sa;Password=Saneuron1.&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=161.18.235.250\sqlexpress;Initial Catalog=LYSIS;Persist Security Info=True;User ID=sa;Password=Saneuron1.&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=vm-blancodev.cloudapp.net;Initial Catalog=LYSISDev;Persist Security Info=True;User ID=sa;Password=Saneuron1.</Value>
+      <Value Profile="(Default)">Data Source=161.18.235.250\sqlexpress;Initial Catalog=LYSIS;Persist Security Info=True;User ID=sa;Password=Saneuron1.</Value>
     </Setting>
   </Settings>
 </SettingsFile>
