--- a/Neuron.OSC/app.config
+++ b/Neuron.OSC/app.config
@@ -99,6 +99,12 @@
       <setting name="FileRoute" serializeAs="String">
         <value>D:\documentos\</value>
       </setting>
+      <setting name="PrintToken" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="WebSite" serializeAs="String">
+        <value>www.google.com</value>
+      </setting>
     </Neuron.OSC.Properties.Settings>
     <ControlsSettings>
       <setting name="NumeroDeResultados" serializeAs="String">
