--- a/Neuron.OSC/Properties/Settings.settings
+++ b/Neuron.OSC/Properties/Settings.settings
@@ -89,10 +89,16 @@
     <Setting Name="DBConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=vm-lysissql2.cloudapp.net;Initial Catalog=LYSISPrueba;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True;Application Name=NuevaOsctest&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=Lysis1.eastus2.cloudapp.azure.com;Initial Catalog=LYSISMD;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True;Application Name=DeskLysisMD&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=vm-lysissql2.cloudapp.net;Initial Catalog=LYSISPrueba;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True;Application Name=NuevaOsctest</Value>
+      <Value Profile="(Default)">Data Source=Lysis1.eastus2.cloudapp.azure.com;Initial Catalog=LYSISMD;Persist Security Info=True;User ID=sa;Password=Saneuron1.;MultipleActiveResultSets=True;Application Name=DeskLysisMD</Value>
+    </Setting>
+    <Setting Name="PrintToken" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="WebSite" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">www.google.com</Value>
     </Setting>
   </Settings>
 </SettingsFile>
